--- a/touchless/index.html
+++ b/touchless/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scrollbar-thin scrollbar-track-zinc-800 scrollbar-thumb-zinc-500">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +9,7 @@
     <!----
   - Favicon
   -->
-  <link rel="shortcut icon" href="./public/images/favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="./images/favicon.svg" type="image/svg+xml">
       <!----
   - Google font
   -->
