--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Touchless</title>
+    <title>Daryna Diaz</title>
 
 
     <!----
   - Favicon
   -->
-  <link rel="shortcut icon" href="/images/favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="/images/logo.svg" type="image/svg+xml">
       <!----
   - Google font
   -->
